--- a/EcommerceProject/Web.config
+++ b/EcommerceProject/Web.config
@@ -4,6 +4,18 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<system.serviceModel>
+		<bindings>
+			<basicHttpBinding>
+				<binding name="BasicHttpBinding_IService" />
+			</basicHttpBinding>
+		</bindings>
+		<client>
+			<endpoint address="http://localhost:55164/Service.svc" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IService" contract="BankAccountService.IService"
+                name="BasicHttpBinding_IService" />
+		</client>
+	</system.serviceModel>
 	<appSettings>
 		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
 	</appSettings>
